fix(rag): 硬技能词典保持插入顺序，prompt 不再随进程重启变化
Map.copyOf 换成 Collections.unmodifiableMap，保留 LinkedHashMap 的插入顺序。

scope：其余 Map.of / Set.of 只用于 contains 判定或 JSON 请求体的键
（JSON 对象键本身无序），不参与任何有序输出，不受影响。